--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickbooks-project",
+  "name": "quickbooks-example",
   "version": "1.0.0",
   "description": "",
   "main": "server",
@@ -15,7 +15,8 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "intuit-oauth": "^1.1.1",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "serverless-http": "^1.8.0"
   },
   "devDependencies": {
     "jest": "^23.6.0",
